--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 	},
 	"dependencies": {
 		"cors": "^2.8.0",
-		"express": "^4.17.1"
+		"express": "^4.17.1",
+		"moment": "^2.29.1"
 	},
 	"engines": {
 		"node": "4.4.5"
